[gd_scene load_steps=13 format=2]

[ext_resource path="res://Public/eye.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Utilitarios/PopupPause.gd" type="Script" id=2]
[ext_resource path="res://Public/roadmap.png" type="Texture" id=3]
[ext_resource path="res://Public/Characters/player.png" type="Texture" id=4]
[ext_resource path="res://Public/Tela de Pausa.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.66
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "punchAttack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.66
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 9, 8, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walking"
length = 0.85
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 9, 8, 10, 11 ]
}

[node name="PopupPause" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -0.016
anchor_top = -0.037
anchor_right = 1.022
anchor_bottom = 1.025
margin_left = 0.384001
margin_top = 0.200001
margin_right = 0.471924
margin_bottom = -6.10352e-05
texture = ExtResource( 5 )
expand = true

[node name="ButtonContinuar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -51.0
margin_right = 127.5
margin_bottom = 51.0
text = "Continuar"

[node name="ButtonMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 73.0
margin_right = 128.0
margin_bottom = 169.0
text = "Voltar ao Menu"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -118.0
margin_right = -49.0
margin_bottom = -102.0
rect_scale = Vector2( 3.54872, 3.64775 )
text = "PAUSADO"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 59, 118 )
scale = Vector2( 7.04687, 7.44271 )
texture = ExtResource( 4 )
centered = false
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/punchAttack = SubResource( 5 )
anims/run = SubResource( 6 )
anims/walking = SubResource( 7 )

[node name="vision" type="Button" parent="."]
anchor_left = 0.736
anchor_top = 0.13
anchor_right = 0.736
anchor_bottom = 0.13
margin_left = 0.335938
margin_right = 39.3359
margin_bottom = 36.0
__meta__ = {
"_edit_group_": true
}

[node name="Eye" type="Sprite" parent="vision"]
scale = Vector2( 0.0761717, 0.0703125 )
texture = ExtResource( 1 )
centered = false

[node name="roadmap" type="Button" parent="."]
anchor_left = 0.791
anchor_top = 0.132
anchor_right = 0.791
anchor_bottom = 0.132
margin_left = 0.0159912
margin_top = -0.199997
margin_right = 39.0
margin_bottom = 35.8
__meta__ = {
"_edit_group_": true
}

[node name="Roadmap" type="Sprite" parent="roadmap"]
scale = Vector2( 0.0683334, 0.0765958 )
texture = ExtResource( 3 )
centered = false

[node name="support" type="Label" parent="."]
anchor_left = 0.647
anchor_top = 0.596
anchor_right = 0.95
anchor_bottom = 0.963
margin_left = 0.471985
margin_top = 3.39999
margin_right = 0.200012
margin_bottom = 1.20001
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="ButtonContinuar" to="." method="_on_ButtonContinuar_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="vision" to="." method="_on_vision_pressed"]
[connection signal="pressed" from="roadmap" to="." method="_on_roadmap_pressed"]
